# skeleton

./: .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.rst  README.md  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
docs/: changelog.rst  conf.py  index.rst
