[build-system]
requires = ["flit-core >= 3.4"]
build-backend = "flit_core.buildapi"

[tool.coverage.html]
show_contexts = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["--strict-config", "--strict-markers"]
log_cli_level = "info"
testpaths = ["tests"]
xfail_strict = true
junit_family = "xunit2"
norecursedirs = "tests/integration/*"

[tool.mypy]
python_version = "3.7"
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "truthy-bool", "redundant-expr"]
ignore_missing_imports = true

[tool.black]
line-length = 127
skip-string-normalization = true
target-version = ["py311", "py310", "py39", "py38", "py37"]

[tool.ruff]
line-length = 127
exclude = []
select = [
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "C9",   # mccabe
  "E",    # pycodestyle
  "F",    # pyflakes
  "PGH",  # pygrep-hooks
  "RUF",  # ruff
  "UP",   # pyupgrade
  "W",    # pycodestyle
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
src = ["src"]
target-version = "py37"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.isort]
lines-between-types = 1
lines-after-imports = 2
